# neotest-haskell

./: .all-contributorsrc  .busted  .gitignore  .neoconf.json  CHANGELOG.md  CONTRIBUTING.md  README.md  flake.nix  neotest-haskell-scm-1.rockspec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: docgen.yml  flakehub-publish-tagged.yml  luarocks.yml  nix-build.yml  pr.yml  release-please-config.json  release.yml  review-checklist.yml  update.yml
dist-newstyle/cache/: compiler
doc/: neotest-haskell.txt
lua/neotest-haskell/: base.lua  cabal.lua  compat.lua  health.lua  hspec.lua  init.lua  internal_types.lua  position.lua  results.lua  runner.lua  stack.lua  sydtest.lua  tasty.lua  treesitter.lua  types.lua  util.lua  validate.lua
neotest_haskell/: init.lua
nix/: ci-overlay.nix  docgen.nix  nvim-plugin-overlay.nix
queries/haskell/: hspec-positions.scm  sydtest-positions.scm  tasty-positions.scm
spec/: hspec_spec.lua  init_spec.lua  runner_spec.lua  setup_spec.lua  sydtest_spec.lua  tasty_spec.lua
spec/Spec/: hs.hs
spec/fixtures/: tree-sitter-haskell-scm-1.rockspec
spec/fixtures/hspec/cabal/simple/: simple.cabal
spec/fixtures/hspec/results/: failure0.txt
spec/fixtures/hspec/stack/simple-package-yaml/: package.yaml
spec/fixtures/results/: hspec_test_file_fail.txt  tasty_test_file_fail.txt
spec/fixtures/sydtest/cabal/simple/: simple-pkg.cabal
spec/fixtures/sydtest/cabal/simple/test/: SydtestFixtureSpec.hs
spec/fixtures/tasty/cabal/multi-package/: .gitignore  cabal.project
spec/fixtures/tasty/cabal/multi-package/tasty-pkg/: tasty-pkg.cabal
tests/: adapter_spec.lua  base_spec.lua  hspec_spec.lua  minimal.lua  runner_spec.lua  setup_spec.lua  sydtest_spec.lua  tasty_spec.lua
tests/fixtures/hspec/cabal/multi-package/: .gitignore  cabal.project
tests/fixtures/hspec/cabal/multi-package/subpackage2/: subpackage2.cabal
tests/fixtures/hspec/cabal/multi-package/subpackage2/test/: Spec.hs
tests/fixtures/hspec/cabal/multi-package/subpackage2/test/Fix2/: FixtureSpec.hs
tests/fixtures/hspec/cabal/simple/test/: FirstSpec.hs
tests/fixtures/hspec/results/: failure0.txt  failure1.txt
tests/fixtures/hspec/stack/multi-package/: stack.yaml
tests/fixtures/hspec/stack/multi-package/subpackage1/: subpackage1.cabal
tests/fixtures/hspec/stack/multi-package/subpackage1/test/Fix1/: FixtureSpec.hs
tests/fixtures/hspec/stack/simple-package-yaml/: simple.cabal
tests/fixtures/results/: test_file_fail.txt
tests/fixtures/sydtest/: SYDTEST-LICENSE.md
tests/fixtures/sydtest/cabal/simple/: .gitignore  simple.cabal
tests/fixtures/sydtest/results/: failure.txt
(+13 files in other folders)
