cabal-version: 1.12

name:           simple
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

test-suite simple-spec
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      SydtestFixtureSpec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
      sydtest-discover:sydtest-discover
  build-depends:
      base >=4.7 && <5
    , sydtest
    , sydtest-discover
    , simple
    , QuickCheck
  default-language: Haskell2010
