cabal-version:      3.0
name:               subpackage2
version:            0.1.0.0
build-type:         Simple
common common
    ghc-options: -Wall
    default-language: Haskell2010

library
    import:           common
    build-depends:    base >=4.9 && < 5
    hs-source-dirs:   src
    exposed-modules:  Lib

test-suite simple-test
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base
                    , hspec ==2.*
                    , hspec-discover
                    , subpackage2
    other-modules:    Fix2.FixtureSpec
